I have fixed alignment issues, create books but selection box not done.

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -46,7 +46,8 @@ body {
 }
 
 .reading-area {
-  padding: 10px 20px;
+  padding: 0 20px;
+  overflow-x: hidden;
 
   h1 {
     color: $welcome-title-color;
@@ -88,7 +89,7 @@ body {
     padding: 5px;
     list-style-type: none;
     overflow: hidden;
-    width: 100%;
+    width: 91%;
   }
 
   .books-list li .edit-update-icon {
