--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -23,3 +23,6 @@ $list-item-font: 22px
 .form-row
     margin: 15px 33px
 
+.inline
+    margin-left: -15px
+
